# HIS

./: .gitignore
Lab1_BinaryRepresentation/: .coverage  .gitignore  main.py
Lab1_BinaryRepresentation/src/: constants.py  converter.py  utils.py
Lab1_BinaryRepresentation/src/bcd/: converter.py  operations.py
Lab1_BinaryRepresentation/src/floating_point/: converter.py  operations.py
Lab1_BinaryRepresentation/src/integer/: converter.py  operations.py
Lab1_BinaryRepresentation/tests/: test_bcd_converter.py  test_bcd_operations.py  test_converter.py  test_float_converter.py  test_float_operations.py  test_int_converter.py  test_int_operations.py  test_operations.py  test_utils.py
Lab2_Sem4/: .coverage  .gitignore  README.md  pyproject.toml
Lab2_Sem4/src/lab2_sem4/: __init__.py  constants.py  models.py  service.py
Lab2_Sem4/src/lab2_sem4/analysis/: derivatives.py  fictive_variables.py  normal_forms.py  post_classes.py  truth_table.py  zhegalkin.py
Lab2_Sem4/src/lab2_sem4/cli/: main.py
Lab2_Sem4/src/lab2_sem4/core/: __init__.py  ast_nodes.py  expression.py  parser.py  tokenizer.py
Lab2_Sem4/src/lab2_sem4/formatting/: __init__.py  report_formatter.py
Lab2_Sem4/src/lab2_sem4/minimization/: __init__.py  common.py  karnaugh.py  quine_mccluskey.py
Lab2_Sem4/tests/: test_analysis_features.py  test_cli_and_formatter.py  test_minimization.py  test_tokenizer_parser.py  test_truth_table_and_forms.py
Lab3_Sem4/: pyproject.toml
Lab3_Sem4/Lab3_Sem4/: README.md  main.py
Lab3_Sem4/Lab3_Sem4/part1/: main.py  synthesizer.py
Lab3_Sem4/Lab3_Sem4/part2/: main.py  (+2 more)
(+2 files in other folders)
